fixed collapse code and some animation oddities, also added some comments/TODOs

--- a/src/shared/css/styles.css
+++ b/src/shared/css/styles.css
@@ -30,7 +30,7 @@
 }
 
 .tile {
-	border: 1px solid green;
+	/*border: 1px solid green;*/
 	position: absolute;
 	display: inline-block;
 	text-align: center;
